--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 coverage
 *.local
 
+
 /cypress/videos/
 /cypress/screenshots/
 
@@ -21,6 +22,7 @@ coverage
 .vscode/*
 !.vscode/extensions.json
 .idea
+.history
 *.suo
 *.ntvs*
 *.njsproj
