--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "naive-ui": "^2.40.3",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
+    "qiniu-js": "^3.4.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -42,6 +43,7 @@
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^2.1.4",
     "vue-tsc": "^2.1.10"
   },
