--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "@vueuse/core": "^12.0.0",
     "axios": "^1.7.9",
     "less": "^4.2.1",
     "naive-ui": "^2.40.3",
