--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "qiniu-js": "^3.4.1",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
