--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^12.0.0",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "less": "^4.2.1",
     "naive-ui": "^2.40.3",
     "pinia": "^2.2.6",
