--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^12.0.0",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
+    "echarts": "^5.5.1",
     "less": "^4.2.1",
     "naive-ui": "^2.40.3",
     "pinia": "^2.2.6",
