--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/crypto-js": "^4.2.2",
     "@vicons/antd": "^0.13.0",
+    "@vicons/carbon": "^0.13.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^12.0.0",
     "axios": "^1.7.9",
