--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "crypto-js": "^4.2.0",
     "echarts": "^5.5.1",
     "less": "^4.2.1",
-    "naive-ui": "^2.40.3",
+    "naive-ui": "^2.41.0",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "qiniu-js": "^3.4.1",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/archiver": "^6.0.3",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -42,6 +43,7 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "archiver": "^7.0.1",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
