--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vicons/antd": "^0.13.0",
     "@vicons/carbon": "^0.13.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.13.0",
     "@vueuse/core": "^12.0.0",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
