--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # 项目基础地址
-VITE_BASE_URL=https://api.production-domain.com/
+VITE_APP_PUBLIC_PATH=/advertising/
+VITE_BASE_URL=https://pay.moujiang.com/advert
 
 # 广告投放数据接口地址
-VITE_ADVERTISING_PLACEMENT_BASE_URL=https://advertising-api.production-domain.com/ 
+VITE_ADVERTISING_PLACEMENT_BASE_URL=https://pay.moujiang.com/apiAdmin
